feat: frontend implementation conjugation exercise
